# openbookqa-environment

./: README.md  openbookqa.py  pyproject.toml
