[project]
name = "openbookqa"
description = "OpenBookQA evaluator for science question answering."
tags = ["science","reasoning","nlp","mcq"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "prime>=0.5.42",
    "verifiers>=0.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["openbookqa.py"]
